# preview-environment

./: .gitignore  README.md
app/: Dockerfile  pyproject.toml
app/src/app/: main.py
kubernetes/: k3d_config.yaml  test_nginx_server.yaml  vcluster_config.yaml
kubernetes/vcluster/: app_cluster_config.yaml
