[project]
name = "PreviewEnvironmentDemo"
version = "0.1.0"
description = "Example project used to demonstrate the use of preview environments."
authors = [
    { name = "Nick James", email = "nickjames8806@gmail.com" }
]
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "pydantic>=2.5.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "app:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
